welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:12: error: value nbPas is not a member of Int
			for(cpas <- 1 nbPas){
                                      ^